start integrating firebase

--- a/firebase.json
+++ b/firebase.json
@@ -1,34 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "aureola-5e3dd",
-          "appId": "1:159445462515:android:d8979af035f89fc8933686",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "aureola-5e3dd",
-          "configurations": {
-            "android": "1:159445462515:android:d8979af035f89fc8933686",
-            "ios": "1:159445462515:ios:f35e8e815f0dfaef933686",
-            "web": "1:159445462515:web:37e34f0c5f51a9f6933686"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"aureola-5e3dd","appId":"1:159445462515:android:d8979af035f89fc8933686","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"aureola-5e3dd","configurations":{"android":"1:159445462515:android:d8979af035f89fc8933686","ios":"1:159445462515:ios:f35e8e815f0dfaef933686","macos":"1:159445462515:ios:f35e8e815f0dfaef933686","web":"1:159445462515:web:37e34f0c5f51a9f6933686","windows":"1:159445462515:web:cad9bbf13f56bf1e933686"}}}}},"hosting":{"source":".","ignore":["firebase.json","**/.*","**/node_modules/**"],"frameworksBackend":{"region":"us-central1"}}}
