--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   country_state_city_picker: ^1.2.8
   cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
   
   
 
@@ -90,6 +91,8 @@ flutter:
     - assets/lang/tr.json
     - assets/images/demo/
     - assets/icons/
+
+    
   fonts:
     - family: CinzelDecorative
       fonts:
