--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   cloud_firestore: ^5.5.0
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
+  firebase_storage: ^12.3.7
+  cached_network_image: ^3.4.1
   
   
 
