--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   image_cropper: ^8.0.2
   file_picker: ^8.1.5
   flutter_image_compress: ^2.3.0
+  carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.0+3
   
   
 
