--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,6 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   intl_phone_field: ^3.2.0
   country_picker: ^2.0.27
-  csc_picker: ^0.2.7
   place_picker_google: ^0.0.12
   google_maps_flutter: ^2.10.0
   http: ^1.2.2
@@ -63,6 +62,9 @@ dependencies:
   flutter_image_compress: ^2.3.0
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  csc_picker: ^0.2.7
+  intl: ^0.19.0
+  flutter_dotenv: ^5.2.1
   
   
 
@@ -93,6 +95,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
+    - .env
     - assets/lang/en.json
     - assets/lang/ar.json
     - assets/lang/fr.json
