--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   csc_picker: ^0.2.7
   intl: ^0.19.0
+  flutter_chips_input: ^2.0.0
+  textfield_tags: ^3.0.1
   
   
 
