--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - assets/lang/ar.json
     - assets/lang/fr.json
     - assets/lang/tr.json
+    - assets/lang/es.json
     - assets/images/demo/
     - assets/icons/
 
